Bug 75389 - state_tracker/st_glsl_to_tgsi.cpp:5144:38: error: cannot convert 'exec_list*' to 'FILE* {aka _IO_FILE*}' for argument '1' to 'void _mesa_print_ir(FILE*, exec_list*, _mesa_glsl_parse_state*)'
Summary: state_tracker/st_glsl_to_tgsi.cpp:5144:38: error: cannot convert 'exec_list*'...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-02-23 04:11 UTC by Vinson Lee
Modified: 2014-02-23 06:08 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-02-23 04:11:49 UTC
mesa: 83daa88035af978c5158cfe5a196df45ce1555c1 (master)

  CXX      st_glsl_to_tgsi.lo
state_tracker/st_glsl_to_tgsi.cpp: In function 'gl_program* get_mesa_program(gl_context*, gl_shader_program*, gl_shader*)':
state_tracker/st_glsl_to_tgsi.cpp:5144:38: error: cannot convert 'exec_list*' to 'FILE* {aka _IO_FILE*}' for argument '1' to 'void _mesa_print_ir(FILE*, exec_list*, _mesa_glsl_parse_state*)'
       _mesa_print_ir(shader->ir, NULL);
                                      ^
Comment 1 Vinson Lee 2014-02-23 04:15:44 UTC
1e3bd9f9a5af90295788c5d71ea27c61eb7bd984 is the first bad commit
commit 1e3bd9f9a5af90295788c5d71ea27c61eb7bd984
Author: Eric Anholt <eric@anholt.net>
Date:   Thu Feb 20 18:00:23 2014 -0800

    glsl: Add a file argument to the IR printer.
    
    While we want to be able to print to stdout for glsl_compiler, for
    debugging drivers we want to be able to dump to stderr because that's
    where other driver debug (like LIBGL_DEBUG) tends to go, and because some
    apps actually close stdout to shut up their own messages (such as the X
    Server, or NWN).
    
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Matt Turner <mattst88@gmail.com>

:040000 040000 cddc74d4801fc1a096fa3bb784fcf8f19cfbdf2f 1486f4aca5ff841ccae8a3893a3f93a7b3c4f524 M	src
bisect run success
Comment 2 Kenneth Graunke 2014-02-23 06:08:39 UTC
commit 5e639a5f59a348abddff8f2cd475c00ef79c8776
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Sat Feb 22 22:08:55 2014 -0800

    glsl: Pass stdout to _mesa_print_ir from st_glsl_to_tgsi.
    
    Fixes the Gallium build since commit 1e3bd9f9a5af90295788c5d71ea27c.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75389
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>

(I just pushed it without waiting for the mailing list since the build was broken for all Gallium drivers and the fix was obvious.)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.