glsl: Pass stdout to _mesa_print_ir from st_glsl_to_tgsi.

Fixes the Gallium build since commit 1e3bd9f9a5af90295788c5d71ea27c.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75389
Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>